--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "react-template",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pswiecicki.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pre-commit" : "lint-staged"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "src/**/*.{js,json,css,scss}": [
